add BlogPolicy, add Authentication, Blog listing, Blog view and WhoAmI requests in api
