# app/Http/Controllers/Backend/Controller.php
@@ -9,4 +9,11 @@ use Illuminate\Routing\Controller as BaseController;
 class Controller extends BaseController
 {
     use AuthorizesRequests, ValidatesRequests;
+    protected $data;
+    protected $pagerLimit = 15;
+    protected $templateName = 'templates/';
+
+    public function __construct(){
+
+    }
 }
